simplification the logic of saving scans in the database